First step in modernizing this module.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension Text::Graph.
+Revision history for Text::Graph.
 
 0.23  Sun Jun  5 00:43 2005
         - Corrected Change log. (Shouldn't do updates at this time of night.)
